--- a/newhome.html
+++ b/newhome.html
@@ -65,7 +65,7 @@
         <div class="close">
             <button class="close_btn" onclick="document.querySelector('.login-container').style.display='none';">x</button>
         </div>
-        <form class="login-form">
+        <form class="login-form" method="post" action="서버url">
             <h1>login</h1>
             <input type="text" id="username" name="id" placeholder="Email">
             <input type="password" id="password" name="password" placeholder="Password">
