--- a/home-select.html
+++ b/home-select.html
@@ -8,11 +8,11 @@
 
     <title>이때어때</title>
 
-    <link rel="stylesheet" href="./css/new.css" />
+    <link rel="stylesheet" href="./css/main.css" />
     <script defer src="./js/main.js"></script>
 </head>
 <body>
-    <img id="banner" src="./images/banner.png" style="filter:brightness(80%); border-radius: 10px;"></img>
+    <img id="banner" src="./images/banner.png" style="filter:brightness(80%); border-radius: 10px;" onclick="location.href='./home-select.html'"></img>
     <div class="main-container">
         <div class="home2-container">
             <div class="section2 notLeftButton notRightButton">
@@ -24,7 +24,7 @@
                     <p>이벤트 생성 및 확인</p>
                     <p class="sub_text">면접관용</p>
                 </button>
-                <button class="select_btn rightButton notLeftButton" id="right-button" onclick="location.href='./timetable.html'">
+                <button class="select_btn notLeftButton" id="right-button" onclick="">
                     <p>면접 가능 시간 체크</p>
                     <p class="sub_text">면접자용</p>
                 </button>
