--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
     <!--Google Material Icons-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
-    <link rel="stylesheet" href="./css/new.css" />
+    <link rel="stylesheet" href="./css/main.css" />
     <script defer src="./js/main.js"></script>
 </head>
 
